# ORCA

./: .gitignore  LICENSE  Makefile  README.md
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/ai_assist/: __init__.py  models.py  provider.py  service.py
backend/app/api/: __init__.py  deps.py  router.py
backend/app/collection/: README.md  __init__.py  interfaces.py
backend/app/core/: __init__.py  audit.py  config.py  content_store.py  database.py  graph.py  rbac.py  security.py  upload_policy.py
backend/app/db/: __init__.py  seed.py
backend/app/foundry/: __init__.py  client.py  config.py  discover.py  errors.py  health.py  import_service.py  mock_client.py  real_client.py  rest_client.py
backend/app/foundry_mapping/: __init__.py  actions.py  export.py  links.py  objects.py  permissions.py  spec.py  types.py
backend/app/models/: __init__.py  associations.py  audit.py  base.py  case.py  cluster.py  entity.py  enums.py  evidence.py  hunting.py  observation.py  relationship.py  report.py  report_package.py  review.py  source.py  types.py  user.py
backend/app/repositories/: __init__.py  base.py  cluster_repository.py  entity_repository.py  graph_repository.py  memory.py  observation_repository.py  relationship_repository.py  review_repository.py  source_repository.py  sql.py  store.py  uow.py
backend/app/schemas/: __init__.py  audit.py  case.py  cluster.py  common.py  entity.py  evidence.py  foundry.py  graph.py  handling.py  hunting.py  hunting_escalation.py  observation.py  relationship.py  report.py  report_package.py  review.py  source.py  timeline.py  user.py
backend/app/services/: __init__.py  authz.py  case_access.py  case_service.py  cluster_service.py  entity_service.py  errors.py  (+20 more)
backend/db/: README.md
backend/migrations/: env.py
(+201 files in other folders)
