[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orca-backend"
version = "0.1.0"
description = "ORCA — observation, evidence, and relationship platform for intelligence analysts."
readme = "README.md"
requires-python = ">=3.11"
# Full terms in the repository-root LICENSE file. An inline string is used here
# because build backends reject license files outside the project directory.
license = { text = "Proprietary — All rights reserved. See LICENSE." }
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "SQLAlchemy>=2.0",
    "psycopg[binary]>=3.1",
    "neo4j>=5.18",
    "alembic>=1.13",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.3",
    "PyYAML>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# (str, Enum) is used deliberately for SQLAlchemy/Pydantic compatibility; StrEnum
# changes str() semantics, so we keep the explicit mixin.
ignore = ["UP042"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection markers (and our capability guard) are intended as
# call-in-default values.
extend-immutable-calls = [
    "fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Body", "fastapi.Header",
    "app.api.deps.require",
]

[tool.ruff.lint.per-file-ignores]
# Migrations are generated-style and favour explicit, wide column definitions.
"migrations/*" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["../tests/backend", "../tests/structure"]
pythonpath = ["."]
